--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="flexContainer">
     <div style="padding: 50px 30px 0px 30px;">
-      <ion-text style="font-size: 30px; font-weight: 700;">Book Your Seat</ion-text>
+      <ion-text style="font-size: 30px; font-weight: 700;" color="rid-goodgreen-two">Book Your Seat</ion-text>
     </div>
     <div style="position: relative;" class="ion-padding">
       <img *ngIf="isLoaded" class="denah-utama" src={{imageDenah}}>
@@ -43,8 +43,8 @@
         <div *ngFor="let x of seatDataList">
           <ion-accordion-group mode="md" expand="inset">
             <ion-accordion value="x.code">
-              <ion-item *ngIf="!x.bookedSeatData" slot="header" color="success">{{x.name}}</ion-item>
-              <ion-item *ngIf="x.bookedSeatData" slot="header" color="danger">{{x.name}}</ion-item>
+              <ion-item *ngIf="!x.bookedSeatData" slot="header" color="rid-goodgreen-two">{{x.name}}</ion-item>
+              <ion-item *ngIf="x.bookedSeatData" slot="header" color="rid-goodred-two">{{x.name}}</ion-item>
               <ion-item *ngIf="x.bookedSeatData" slot="content" class="item">
                 <ion-label>
                   {{x.bookedSeatData.employee_id[1]}}
@@ -84,8 +84,8 @@
           <div *ngFor="let x of search">
             <ion-accordion-group mode="md" expand="inset">
               <ion-accordion value="asesmen">
-                <ion-item *ngIf="!x.bookedSeatData" slot="header" color="success">{{x.name}}</ion-item>
-                <ion-item *ngIf="x.bookedSeatData" slot="header" color="danger">{{x.name}}</ion-item>
+                <ion-item *ngIf="!x.bookedSeatData" slot="header" color="rid-goodgreen-two">{{x.name}}</ion-item>
+                <ion-item *ngIf="x.bookedSeatData" slot="header" color="rid-goodred-two">{{x.name}}</ion-item>
                 <ion-item *ngIf="x.bookedSeatData" slot="content" class="item">
                   <ion-label>
                     {{x.bookedSeatData.code_id[1]}}
@@ -101,8 +101,8 @@
           <div *ngFor="let x of userGroupDataList">
             <ion-accordion-group mode="md" expand="inset">
               <ion-accordion value="asesmen">
-                <ion-item *ngIf="!x.bookedSeatData" slot="header" color="success">{{x.name}}</ion-item>
-                <ion-item *ngIf="x.bookedSeatData" slot="header" color="danger">{{x.name}}</ion-item>
+                <ion-item *ngIf="!x.bookedSeatData" slot="header" color="rid-goodgreen-two">{{x.name}}</ion-item>
+                <ion-item *ngIf="x.bookedSeatData" slot="header" color="rid-goodred-two">{{x.name}}</ion-item>
                 <ion-item *ngIf="x.bookedSeatData" slot="content" class="item">
                   <ion-label>
                     {{x.bookedSeatData.code_id[1]}}
