--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,5 @@
 <ion-tabs>
-
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" color="rid-goodgreen-seven">
     <ion-tab-button tab="home" href="route.home">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
       <ion-label>Home</ion-label>
@@ -11,5 +10,4 @@
       <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
