- update version 1.0.9 - absensi

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -55,6 +55,14 @@
     </ion-card>
     <br>
 
+    <!-- <ion-card mode="ios" class="ion-no-margin">
+      <ion-item color="rid-goodcream-two" detail class="ion-activatable" (click)="Absen()">
+        <ion-label>Absen</ion-label>
+      </ion-item>
+      <ion-ripple-effect></ion-ripple-effect>
+    </ion-card>
+    <br> -->
+
     <ion-card mode="ios" class="ion-no-margin">
       <ion-item color="rid-goodcream-two" detail class="ion-activatable" (click)="Logout()">
         <ion-label>Logout</ion-label>
